--- a/nan/main.css
+++ b/nan/main.css
@@ -136,3 +136,13 @@ button {
   padding: 1rem;
   letter-spacing: 0.35px;
 }
+
+strong {
+  border: #03a2f8 dashed 0px;
+  text-align: justify;
+  color: #383d48;
+  font-size: 1rem;
+  font-style: italic;
+  padding: 1rem;
+  letter-spacing: 0.35px;
+}
